@@ -175,12 +175,12 @@ script.on_init(function()
     item_values.init()
     item_ranks.init()
     quests.init()
+    hex_island.init() -- Must come before trades.init() for guaranteed trades to work
     trades.init()
     blueprints.init()
     loot_tables.init()
     dungeons.init()
     -- spiders.init()
-    hex_island.init()
     train_trading.init()
     strongboxes.init()
     piggy_bank.init()
